--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
 logo: https://github.com/dok115/bimm143_DSK/blob/master/4.JPG
 title: DongSuKim's BIMM143 class (WI'20 2020)
